[package]
name = "yeveswap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yeveswap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26"
spl-token = {version = "3.3", features = ["no-entrypoint"]}
solana-program = "1.14.12"
thiserror = "1.0"
uint = {version = "0.9.1", default-features = false}
borsh = "0.9.1"
mpl-token-metadata = { version = "1.7", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]
